--- a/Galerie.html
+++ b/Galerie.html
@@ -17,11 +17,12 @@
         <img src="https://github.com/pasr0/media/blob/main/BAHANCEFAYT/3.png?raw=true" class="clickable" data-name="Workshop Fayot">
         <img src="https://github.com/pasr0/media/blob/main/A4%20-%209.jpg?raw=true" class="clickable" data-name="Affiches aragonites">
         <img src="https://github.com/pasr0/media/blob/main/main/MAIN%20DOC/App%20Icon%20Mockup%201.png?raw=true" class="clickable" data-name="UI/UX App Flanô">
-        <video src="https://github.com/pasr0/media/blob/main/JPO_Hello.gif?raw=true" autoplay loop muted class="clickable" data-name="Cavalary JPO"></video>
+        <img srcc="https://github.com/pasr0/media/blob/main/JPO_Hello.gif?raw=true" autoplay loop muted class="clickable" data-name="Cavalary JPO">
         <img src="https://github.com/pasr0/media/blob/main/Slide%2016_9%20-%201.png?raw=true" class="clickable" data-name="Workshop Risographie">
          <img src="https://github.com/pasr0/media/blob/main/Bibs_Winnie.gif?raw=true" class="clickable" data-name="Winnie Musik">
         <img src="images\Slide 16_9 - 5.png" class="clickable" data-name="Collection Photo">
-        <video src="https://github.com/pasr0/media/blob/main/JPO_Hello.gif?raw=true" autoplay loop muted class="clickable" data-name="Cavalary JPO"></video>
+        <img src="https://github.com/pasr0/media/blob/main/grainouilette/Seeddating%20(11)%201.png?raw=true" class="clickable" data-name="Charte graphique">
+        <img src="https://github.com/pasr0/media/blob/main/JPO_Hello.gif?raw=true" autoplay loop muted class="clickable" data-name="Cavalary JPO">
         <img src="https://github.com/pasr0/media/blob/main/Logo_vhs.gif?raw=true" class="clickable" data-name="VHS simulation">
     
     </div>
