--- a/Galerie.html
+++ b/Galerie.html
@@ -12,7 +12,7 @@
   overflow-x: auto ;}</style>
     <canvas id="grain-overlay"></canvas>
     
-    <h1>Pasco Romane</h1>
+    <h1>PASCO ROMANE</h1>
     <div class="grid">
         <img src="https://github.com/pasr0/media/blob/main/BAHANCEFAYT/3.png?raw=true" class="clickable" data-name="Workshop Fayot">
         <img src="https://github.com/pasr0/media/blob/main/A4%20-%209.jpg?raw=true" class="clickable" data-name="Affiches aragonites">
