--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <script src="box.js"></script>
 
     <h1 style="position: absolute; top: -100vh; /* Positionnement initial pour l'animation */
-  transition: top 1s ease-in-out, font-size 0.5s ease, transform 0.5s ease; /* Durée et type d'animation */">PASCO ROMANE</h1>
+  transition: top 1s ease-in-out, font-size 0.5s ease, transform 0.5s ease; /* Durée et type d'animation */">ROMANE PASCO</h1>
 
 
 
