--- a/Galerie.html
+++ b/Galerie.html
@@ -8,8 +8,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <style>  body {overflow: auto; /* Empêche le défilement pendant l'animation */
-  overflow-x: auto ;}</style>
+    <style>  body {overflow: auto; }</style>
     <canvas id="grain-overlay"></canvas>
     
     <h1>ROMANE PASCO</h1>
