--- a/Galerie.html
+++ b/Galerie.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <style>  body {overflow: auto; }</style>
+    <style>  body {overflow: auto;  overflow-x: hidden ;}</style>
     <canvas id="grain-overlay"></canvas>
     
     <h1>ROMANE PASCO</h1>
