--- a/Galerie.html
+++ b/Galerie.html
@@ -18,10 +18,10 @@
         <img src="https://github.com/pasr0/media/blob/main/main/MAIN%20DOC/App%20Icon%20Mockup%201.png?raw=true" class="clickable" data-name="UI/UX App Flanô">
         <img srcc="https://github.com/pasr0/media/blob/main/JPO_Hello.gif?raw=true" autoplay loop muted class="clickable" data-name="Cavalary JPO">
         <img src="https://github.com/pasr0/media/blob/main/Slide%2016_9%20-%201.png?raw=true" class="clickable" data-name="Workshop Risographie">
-         <img src="https://github.com/pasr0/media/blob/main/Bibs_Winnie.gif?raw=true" class="clickable" data-name="Winnie Musik">
-        <img src="images\Slide 16_9 - 5.png" class="clickable" data-name="Collection Photo">
+        <img src="https://github.com/pasr0/media/blob/main/Bibs_Winnie.gif?raw=true" class="clickable" data-name="Winnie Musik">
+        <img src="https://github.com/pasr0/media/blob/main/IMG_9442-2.jpg?raw=true" class="clickable" data-name="Collection Photo">
         <img src="https://github.com/pasr0/media/blob/main/grainouilette/Seeddating%20(11)%201.png?raw=true" class="clickable" data-name="Charte graphique">
-        <img src="https://github.com/pasr0/media/blob/main/JPO_Hello.gif?raw=true" autoplay loop muted class="clickable" data-name="Cavalary JPO">
+        <img src="https://github.com/pasr0/media/blob/main/JPO_Simulation.gif?raw=true" autoplay loop muted class="clickable" data-name="Cavalary JPO">
         <img src="https://github.com/pasr0/media/blob/main/Logo_vhs.gif?raw=true" class="clickable" data-name="VHS simulation">
     
     </div>
