--- a/Galerie.html
+++ b/Galerie.html
@@ -16,7 +16,7 @@
         <img src="https://github.com/pasr0/media/blob/main/BAHANCEFAYT/3.png?raw=true" class="clickable" data-name="Workshop Fayot">
         <img src="https://github.com/pasr0/media/blob/main/A4%20-%209.jpg?raw=true" class="clickable" data-name="Affiches aragonites">
         <img src="https://github.com/pasr0/media/blob/main/main/MAIN%20DOC/App%20Icon%20Mockup%201.png?raw=true" class="clickable" data-name="UI/UX App Flanô">
-        <img srcc="https://github.com/pasr0/media/blob/main/JPO_Hello.gif?raw=true" autoplay loop muted class="clickable" data-name="Cavalary JPO">
+        <img src="https://github.com/pasr0/media/blob/main/JPO_Hello.gif?raw=true" autoplay loop muted class="clickable" data-name="Cavalary JPO">
         <img src="https://github.com/pasr0/media/blob/main/Slide%2016_9%20-%201.png?raw=true" class="clickable" data-name="Workshop Risographie">
         <img src="https://github.com/pasr0/media/blob/main/Bibs_Winnie.gif?raw=true" class="clickable" data-name="Winnie Musik">
         <img src="https://github.com/pasr0/media/blob/main/IMG_9442-2.jpg?raw=true" class="clickable" data-name="Collection Photo">
