--- a/Galerie.html
+++ b/Galerie.html
@@ -23,6 +23,11 @@
         <img src="https://github.com/pasr0/media/blob/main/grainouilette/Seeddating%20(11)%201.png?raw=true" class="clickable" data-name="Charte graphique">
         <img src="https://github.com/pasr0/media/blob/main/JPO_Simulation.gif?raw=true" autoplay loop muted class="clickable" data-name="Cavalary JPO">
         <img src="https://github.com/pasr0/media/blob/main/Logo_vhs.gif?raw=true" class="clickable" data-name="VHS simulation">
+        <img src="https://github.com/pasr0/media/blob/main/Instagram%20post%20-%206.png?raw=true" class="clickable" data-name="BDE Noël">
+        <img src="https://github.com/pasr0/media/blob/main/ezgif-63d216ba5a1325.gif?raw=true" class="clickable" data-name="Ticket motion">
+        <img src="https://github.com/pasr0/media/blob/main/BONHOMME.png?raw=true" class="clickable" data-name="3d Klub Blender">
+        <img src="https://github.com/pasr0/media/blob/main/eier%20satan%20frontMOCK.png?raw=true" class="clickable" data-name="Tool t-shirt">
+        
     
     </div>
 
