--- a/Contact.html
+++ b/Contact.html
@@ -10,7 +10,7 @@
 <body>
     <canvas id="grain-overlay"></canvas>
 
-    <h1>PASCO ROMANE</h1>
+    <h1>ROMANE PASCO</h1>
     <div class="container">
         <div class="text-section">
             <p>
@@ -26,7 +26,7 @@
             </p>
             <p>
                 Je suis à la recherche de nouvelles collaborations où je pourrais mettre mes compétences au service de projets créatifs et ambitieux. 
-                Si vous cherchez une graphiste polyvalente, curieuse et ouverte à de nouvelles idées, je serais ravie de discuter de vos besoins.
+                Si vous cherchez une graphiste polyvalente, curieuse et ouverte à de nouvelles idées, je serais ravie de discuter de vos projets.
             </p>
             <div class="contact-section">
                 <p>Contact </p>
