--- a/Contact.html
+++ b/Contact.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+      <style>  body {overflow: auto;  overflow-x: hidden ;}</style>
     <canvas id="grain-overlay"></canvas>
 
     <h1>ROMANE PASCO</h1>
