--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         transition: top 1s ease-in-out, font-size 0.5s ease, transform 0.5s ease; /* Durée et type d'animation */">ROMANE PASCO</h1>
 
     <nav>
-        <a href="Home.html" class="clickable" data-name="Home" id="home-link">Home</a>
+        <a href="index.html" class="clickable" data-name="Home" id="home-link">Home</a>
         <a href="Galerie.html" class="clickable" data-name="Galerie" id="galerie-link">Galerie</a>
         <a href="Contact.html" class="clickable" data-name="Contact" id="contact-link">Contact</a>
         <button id="colorButton" class="clickable" data-name="Magie">Couleurs</button>
