--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
 </head>
 <body>
     <canvas id="grain-overlay"></canvas>
+    <div id="mobile-message">
+    Ce contenu n'est pas disponible sur mobile.
+</div>
+<canvas id="cubeCanvas"></canvas>
+
     <script src="box.js"></script>
 
     <h1 style="position: absolute; top: -100vh; /* Positionnement initial pour l'animation */
