--- a/Galerie.html
+++ b/Galerie.html
@@ -6,6 +6,7 @@
     <title>ROMANE PASCO</title>
     <link rel="icon" type="image/x-icon" href="favicon.ico">
     <link rel="stylesheet" href="styles.css">
+    <meta name="p:domain_verify" content="f79dca6fe3b6214515bf90b4fcae73ca"/>
 </head>
 <body>
     <style>  body {overflow: auto;  overflow-x: hidden ;}</style>
@@ -169,3 +170,4 @@ window.addEventListener('load', function() {
     </script>
 </body>
 </html>
+
