--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <script src="https://unpkg.com/ml5@1/dist/ml5.min.js"></script>
   </head>
   <body>
-    <script src="sketch_v8.js"></script>
+    <script src="sketch.js"></script>
   </body>
 </html>
