--- a/print.html
+++ b/print.html
@@ -24,7 +24,6 @@
             flex-direction: column;
         }
 
-        /* --- EN-TÊTE --- */
         header h1 {
             font-size: 60px;
             font-weight: bold;
@@ -41,7 +40,6 @@
             color: black;
         }
 
-        /* --- IMAGE --- */
         .photo-wrapper {
             width: 100%;
             height: 500px;
@@ -57,7 +55,6 @@
             display: block;
         }
 
-        /* --- INFOS --- */
         .meta-data {
             display: flex;
             justify-content: space-between;
@@ -77,7 +74,6 @@
             background-color: black;
         }
 
-        /* --- ÉCRAN D'ATTENTE --- */
         #waiting-screen {
             text-align: center;
             color: #888;
@@ -87,20 +83,9 @@
         
         @keyframes blink { 0% { opacity: 0.2; } 50% { opacity: 1; } 100% { opacity: 0.2; } }
 
-        /* --- MODE IMPRESSION --- */
         @media print {
-            body { 
-                background: white; 
-                height: auto; 
-                display: block;
-                padding: 0;
-            }
-            #card-container {
-                box-shadow: none;
-                width: 100%;
-                display: block !important;
-                padding: 0;
-            }
+            body { background: white; height: auto; display: block; padding: 0; }
+            #card-container { box-shadow: none; width: 100%; display: block !important; padding: 0; }
             #waiting-screen { display: none; }
         }
     </style>
@@ -109,8 +94,8 @@
 
     <div id="waiting-screen">
         <div class="loader">●</div>
-        <h1>En attente de connexion...</h1>
-        <p>Prêt à recevoir les scans du jeu.</p>
+        <h1>Prêt pour réception</h1>
+        <p>En attente des données du jeu...</p>
     </div>
 
     <div id="card-container">
@@ -124,7 +109,7 @@
         </div>
 
         <div class="meta-data">
-            <div class="meta-left" id="text-id">Individu ...</div>
+            <div class="meta-left" id="text-id">...</div>
             <div class="meta-right" id="text-adj">...</div>
         </div>
 
@@ -132,54 +117,33 @@
     </div>
 
     <script>
-        const adjectives = [
-            "Agité·e", "Nerveux·se", "Tendu·e", "Fébrile", 
-            "Inquiet·e", "Stressé·e", "Instable", "Impatient·e", 
-            "Brusque", "Perturbé·e", "Paniqué·e", "Crispé·e", 
-            "Survolté·e", "Traqué·e", "Anxieux·se"
-        ];
+        // --- LOGIQUE DE RÉCEPTION ---
         
-        let globalCounter = 1; 
-        let lastAdjectiveIndex = -1; // Pour mémoriser le dernier choix
-
         const cardContainer = document.getElementById('card-container');
         const waitingScreen = document.getElementById('waiting-screen');
         const imgElement = document.getElementById('scan-image');
         const idElement = document.getElementById('text-id');
         const adjElement = document.getElementById('text-adj');
 
+        // On écoute le même canal que sketch.js
         const channel = new BroadcastChannel('biometral_channel');
 
         channel.onmessage = (event) => {
-            if (event.data && event.data.image) {
-                updateCard(event.data.image);
+            // On vérifie qu'on a bien reçu le paquet complet (image + id + adj)
+            if (event.data && event.data.image && event.data.id) {
+                updateCard(event.data);
             }
         };
 
-        function updateCard(imageData) {
+        function updateCard(data) {
             // Affichage de la fiche
             waitingScreen.style.display = 'none';
             cardContainer.style.display = 'flex';
 
-            // Mise à jour de l'image
-            imgElement.src = imageData;
-
-            // Mise à jour du numéro (Ex: 001, 002...)
-            let idNum = globalCounter.toString().padStart(3, '0');
-            idElement.textContent = "Individu " + idNum;
-
-            // --- CHOIX DE L'ADJECTIF (SANS RÉPÉTITION) ---
-            let newIndex;
-            do {
-                // On tire au sort tant que c'est le même que le précédent
-                newIndex = Math.floor(Math.random() * adjectives.length);
-            } while (newIndex === lastAdjectiveIndex);
-
-            lastAdjectiveIndex = newIndex; // On sauvegarde pour la prochaine fois
-            adjElement.textContent = adjectives[newIndex];
-
-            // On prépare le compteur pour le suivant
-            globalCounter++;
+            // Injection des données reçues depuis sketch.js
+            imgElement.src = data.image;
+            idElement.textContent = data.id;   // Ex: "Individu 003"
+            adjElement.textContent = data.adj; // Ex: "Traqué·e"
         }
     </script>
 </body>
