Update HOST_ID to a unique identifier

--- a/print.html
+++ b/print.html
@@ -117,8 +117,7 @@
         const adjElement = document.getElementById('text-adj');
 
         // L'ID doit correspondre exactement à celui dans sketch.js
-        const HOST_ID = "123"; 
-        const peer = new Peer();
+        const HOST_ID = "biometral-host-unique-id-2026"; 
 
         const peer = new Peer(); // Le mobile crée son propre ID aléatoire
 
